# stet

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pdf_visual_test.py  pdf_visual_test.sh  ps_visual_test.py  ps_visual_test.sh  visual_test.py  visual_test.sh
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
crates/stet/: Cargo.toml  LICENSE-APACHE  README.md
crates/stet-cli/: Cargo.toml  README.md
crates/stet-cli/examples/: dump_bboxes.rs
crates/stet-cli/src/: inspect.rs  main.rs
crates/stet-core/: Cargo.toml  README.md
crates/stet-core/src/: agl.rs  array_store.rs  binary_token.rs  cff_parser.rs  charstring.rs  context.rs  device.rs  dict.rs  display_list.rs  dual_array_store.rs  dual_dict_store.rs  dual_string_store.rs  encoding.rs  entity_table.rs  eps.rs  error.rs  file_store.rs  font_loader.rs  glyph_cache.rs  graphics_state.rs  icc.rs  lib.rs  mesh_shading.rs  name.rs  object.rs  pdfmark.rs  save_stack.rs  stack.rs  string_store.rs  system_font_loader.rs  system_fonts.rs  tokenizer.rs  truetype.rs  type1_parser.rs  type2_charstring.rs
crates/stet-engine/: Cargo.toml  LICENSE-MIT  README.md
crates/stet-engine/src/: eval.rs  lib.rs
crates/stet-engine/tests/: rendering.rs
crates/stet-fonts/: Cargo.toml  README.md
crates/stet-fonts/src/: agl.rs  cff_parser.rs  charstring.rs  encoding.rs  geometry.rs  lib.rs  system_fonts.rs  truetype.rs  type1_parser.rs  type2_charstring.rs
crates/stet-graphics/: Cargo.toml  README.md
crates/stet-graphics/examples/: icc_probe.rs
crates/stet-graphics/src/: color.rs  device.rs  display_list.rs  icc.rs  layer_set.rs  lib.rs  mesh_shading.rs
crates/stet-graphics/src/icc/: bpc.rs  perceptual.rs
crates/stet-ops/: Cargo.toml  README.md
crates/stet-pdf/: Cargo.toml  README.md
crates/stet-pdf-reader/: Cargo.toml  README.md
crates/stet-pdf-reader/src/: annotations.rs  crypto.rs  destination.rs  diagnostics.rs  embedded_files.rs  error.rs  filters.rs  form_fields.rs  lexer.rs  lib.rs  metadata.rs  name_tree.rs  objects.rs  outline.rs  page_boxes.rs  page_tree.rs  resolver.rs  viewer_prefs.rs  xref.rs
crates/stet-pdf-reader/src/content/: cid_unicode.rs  cmap.rs  color_space.rs  font.rs  gid_maps.rs  graphics_state.rs  mod.rs  standard_fonts.rs
crates/stet-pdf-reader/src/layers/: configuration.rs  metadata.rs  mod.rs  ocmd.rs
crates/stet-pdf-reader/src/resources/: function.rs  mod.rs  shading.rs
crates/stet-pdf-reader/tests/: gwg_profile_stability.rs  integration.rs
crates/stet-pdf/src/: annotations.rs  attachments.rs  content_stream.rs  font_embedder.rs  font_tracker.rs  form_fields.rs  image_ops.rs  lib.rs  metadata.rs  names.rs  outline.rs  pdf_device.rs  pdf_objects.rs  pdf_writer.rs  shading_ops.rs  text_ops.rs  unicode_mapping.rs
crates/stet-render/: Cargo.toml  README.md
crates/stet-render/examples/: aa_coverage_diff.rs
crates/stet-render/src/: lib.rs  png_sink.rs  skia_device.rs
crates/stet-tiny-skia/: Cargo.toml  README.md
crates/stet-tiny-skia-path/: Cargo.toml  README.md
crates/stet-viewer/: Cargo.toml  README.md
crates/stet-viewer/src/: lib.rs  sink.rs  viewer.rs
crates/stet-wasm/: Cargo.toml  README.md
crates/stet-wasm/examples/: repro_1321.rs
crates/stet-wasm/src/: embedded_resources.rs  lib.rs  memory_sink.rs
crates/stet/examples/: display_list.rs  render_pdf.rs  render_pdf_layers.rs  render_ps.rs
crates/stet/resources/CMap/: Identity-V.ps
crates/stet/resources/ColorSpace/: DefaultGray.ps
crates/stet/resources/Encoding/: ISOLatin1Encoding.ps  StandardEncoding.ps  SymbolEncoding.ps
crates/stet/resources/Init/: fontcategory.ps  fontmapping.ps  pdfextensions.ps  resourcecategories.ps  sysdict.ps
crates/stet/resources/OutputDevice/: pdf.ps  png.ps  viewer.ps
crates/stet/resources/ProcSet/: CIDInit.ps  FontSetInit.ps
crates/stet/src/: embedded_resources.rs  init.rs  lib.rs
crates/stet/tests/: pdfmark.rs
docs/: ARCHITECTURE.md  DISPLAY-LIST.md  GAP-ANALYSIS.md  PDF-EXTENSIONS.md  PDF-LAYERS.md  PDF-OUTPUT-ROADMAP.md  PDF-READER-API.md  PDF-READER-PHASE-A.md  PDF-READER-PHASE-B.md  PDF-READER-PLAN.md  PDF-ROADMAP.md  PDF-TEXT-TODO.md  PDFMARK-AUTHORING.md  PHASE1-PLAN.md  PHASE2-PLAN.md  PHASE3-PLAN.md  PHASE4-PLAN.md  PHASE6-PLAN.md  ROADMAP.md  VIEWER-GUIDE.md  WASM-PARALLEL-RENDERING.md
ps_samples/: 00-preface.ps  01-table-of-contents.ps  02-ch1.ps  03-ch2.ps  04-ch3.ps  05-ch4.ps  06-ch5.ps  07-ch6.ps  08-interlude.ps  09-ch7.ps  10-ch8.ps  11-ch9.ps  12-ch10.ps  13-ch11.ps  14-ch12.ps  15-ch13.ps  16-ch14.ps  17-ch15.ps  18-a1.ps  19-a2.ps  20-a3.ps  21-a4.ps  22-a5.ps  23-a6.ps  24-a7.ps  25-epilogue.ps  26-clipping.ps  abydos.ps  acctest.ps  arc.ps  bezier_curve_length.ps  birthday.ps  bitfont.ps  bricks.ps  cert_border.ps  cie_decode_test.ps  circle.eps  colorcir.ps  colour.ps  corners.ps  (+57 more)
resources/CMap/: Identity-H.ps
resources/ColorSpace/: DefaultCMYK.ps  DefaultRGB.ps
resources/Encoding/: SymbolEncoding.ps  (+1 more)
scripts/: check-non-exhaustive.sh  check-release-versions.sh  fetch-corpus.sh  fetch_test_pdfs.sh  pgo-build.sh  pixeldiff.sh  test-corpus.sh
unit_tests/: .test_stats.tmp  arc_shading_tests.ps  arithmetic_and_math_tests.ps  array_tests.ps  binary_token_tests.ps  cff_tests.ps  clipping_tests.ps  color_operators_tests.ps  context_param_tests.ps  control_tests.ps  dct_filter_tests.ps  defined_ps_operator_tests.ps  device_operator_tests.ps  dictionary_tests.ps  file_operators_tests.ps  file_tests.ps  filter_chain_tests.ps  filter_extended_tests.ps  flate_filter_tests.ps  font_tests.ps  graphics_state_params_tests.ps  gstate_tests.ps  halftone_transfer_tests.ps  image_tests.ps  interpreter_param_tests.ps  jbig2_jpx_filter_tests.ps  job_control_tests.ps  job_control_tests_standalone.ps  matrix_tests.ps  misc_tests.ps  nulldevice_tests.ps  ocg_tests.ps  operand_stack_tests.ps  packedarray_tests.ps  painting_tests.ps  path_tests.ps  pattern_form_tests.ps  print_integration_tests.ps  ps_tests.ps  rel_bool_bitwise_tests.ps  (+15 more)
web/: app.js  build.sh  index.html  patch-wasm-tls.py  serve.py  style.css  worker.js
(+76 files in other folders)
