[workspace]
members = ["crates/*"]
exclude = ["crates/stet-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Scott Bowman <scott@bowmans.org>"]

[workspace.dependencies]
thiserror = "2"
png = "0.17"
rayon = "1"
stet-tiny-skia = { path = "crates/tiny-skia" }
eframe = "0.31"
egui = "0.31"
stet-fonts = { path = "crates/stet-fonts" }
stet-graphics = { path = "crates/stet-graphics" }
stet-core = { path = "crates/stet-core" }
stet-ops = { path = "crates/stet-ops" }
stet-engine = { path = "crates/stet-engine" }
stet-render = { path = "crates/stet-render" }
stet-pdf = { path = "crates/stet-pdf" }
stet-viewer = { path = "crates/stet-viewer" }
stet-pdf-reader = { path = "crates/stet-pdf-reader" }
