[package]
name = "stet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI entry point for stet PostScript interpreter"

[[bin]]
name = "stet"
path = "src/main.rs"

[dependencies]
stet-core.workspace = true
stet-engine.workspace = true
stet-ops.workspace = true
stet-render.workspace = true
stet-pdf.workspace = true
rayon.workspace = true
stet-viewer = { workspace = true, optional = true }

[features]
default = ["viewer"]
viewer = ["dep:stet-viewer"]
