[package]
name = "stet-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for stet — renders PostScript, EPS, and PDF files"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "pdf", "cli", "interpreter", "rendering"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "stet"
path = "src/main.rs"

[dependencies]
stet.workspace = true
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-core.workspace = true
stet-engine.workspace = true
stet-ops.workspace = true
stet-render.workspace = true
stet-pdf.workspace = true
stet-pdf-reader.workspace = true
rayon.workspace = true
png.workspace = true
stet-viewer = { workspace = true, optional = true }

[features]
default = ["viewer"]
viewer = ["dep:stet-viewer"]
