[package]
name = "stet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core type system, storage, tokenizer, and context for stet PostScript interpreter"

[dependencies]
thiserror.workspace = true
flate2 = "1"
weezl = "0.1"
jpeg-decoder = "0.3"
rustc-hash = "2"
