[package]
name = "stet-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core type system, storage, tokenizer, and context for stet PostScript interpreter"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "interpreter", "vm", "graphics"]
categories = ["graphics"]

[dependencies]
stet-fonts.workspace = true
stet-graphics.workspace = true
thiserror.workspace = true
flate2 = "1"
weezl = "0.1"
jpeg-decoder = { version = "0.3", default-features = false }
jpeg-encoder = "0.7"
rustc-hash = "2"
fax = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
moxcms = "0.8"
sha2 = "0.10"
glob = "0.3"
hayro-jbig2 = "0.1.0"
hayro-jpeg2000 = "0.3.4"
