[package]
name = "stet-fonts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Font parsing and geometry types for the stet PostScript interpreter"

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
