[package]
name = "stet-fonts"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure-Rust Type 1, CFF / Type 2, and TrueType font parsers plus geometry types, usable standalone or inside stet's PostScript and PDF pipelines"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "font", "type1", "truetype", "cff"]
categories = ["graphics", "parser-implementations"]

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
