[package]
name = "stet-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Graphics types, display list, and ICC color support for the stet PostScript interpreter"

[dependencies]
stet-fonts.workspace = true
moxcms = "0.8"
sha2 = "0.10"
glob = "0.3"
