[package]
name = "stet-graphics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Graphics types, display list, and ICC color support for the stet PostScript interpreter"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "graphics", "color", "icc", "display-list"]
categories = ["graphics", "rendering"]

[dependencies]
stet-fonts.workspace = true
moxcms = { version = "0.8", features = ["any_to_any"] }
sha2 = "0.10"
glob = "0.3"
