[package]
name = "stet-graphics"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Display list, ICC color, and graphics types shared by stet's PostScript interpreter and PDF reader"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "graphics", "color", "icc", "display-list"]
categories = ["graphics", "rendering"]

[dependencies]
stet-fonts.workspace = true
moxcms = { version = "0.8", features = ["any_to_any"] }
sha2 = "0.10"
glob = "0.3"
