[package]
name = "stet-pdf-reader"
version.workspace = true
edition.workspace = true
license = "Apache-2.0 OR MIT"
authors.workspace = true
description = "PDF parser and renderer"

[dependencies]
thiserror.workspace = true
flate2 = "1"
weezl = "0.1"
md5 = "0.7"
jpeg-decoder = "0.3"
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-render = { workspace = true, optional = true }
openjp2 = { version = "0.6", default-features = false, features = ["std"], optional = true }
hayro-ccitt = "0.2.0"
hayro-jbig2 = "0.1.0"

[features]
default = ["jpx", "render"]
render = ["dep:stet-render"]
jpx = ["dep:openjp2"]

[dev-dependencies]
png.workspace = true
