[package]
name = "stet-pdf-reader"
version.workspace = true
edition.workspace = true
license = "Apache-2.0 OR MIT"
authors.workspace = true
description = "PDF parser and renderer"

[dependencies]
thiserror.workspace = true
flate2 = "1"
md5 = "0.7"
jpeg-decoder = "0.3"
zune-jpeg = "0.5"
zune-core = "0.5"
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-render = { workspace = true, optional = true }
hayro-jpeg2000 = { version = "0.3.4", optional = true }
hayro-ccitt = "0.2.0"
fax = "0.2.6"
hayro-jbig2 = "0.1.0"
skrifa = "0.40"
sha2 = "0.10"

[features]
default = ["jpx", "render"]
render = ["dep:stet-render"]
jpx = ["dep:hayro-jpeg2000"]

[dev-dependencies]
png.workspace = true
