[package]
name = "stet-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PDF output device for stet PostScript interpreter"
repository.workspace = true
homepage.workspace = true
keywords = ["pdf", "postscript", "graphics", "output"]
categories = ["graphics"]

[dependencies]
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-core.workspace = true
flate2 = "1"
