[package]
name = "stet-render"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "tiny-skia rendering backend for stet PostScript interpreter"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "pdf", "rendering", "rasterizer", "graphics"]
categories = ["rendering", "graphics"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-core.workspace = true
stet-tiny-skia.workspace = true
png.workspace = true
rayon = { workspace = true, optional = true }
