[package]
name = "stet-render"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "tiny-skia rasterizer for stet display lists — produces RGBA output from both PostScript and PDF input"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "pdf", "rendering", "rasterizer", "graphics"]
categories = ["rendering", "graphics"]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-core.workspace = true
stet-tiny-skia.workspace = true
png.workspace = true
rayon = { workspace = true, optional = true }
