[package]
name = "stet-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive egui viewer for stet PostScript interpreter"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "pdf", "viewer", "gui"]
categories = ["gui", "graphics"]

[dependencies]
stet-graphics.workspace = true
stet-core.workspace = true
stet-render.workspace = true
eframe.workspace = true
egui.workspace = true
rayon.workspace = true
