[package]
name = "stet-viewer"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive egui desktop viewer for PostScript, EPS, and PDF files"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "pdf", "viewer", "gui"]
categories = ["gui", "graphics"]

[dependencies]
stet-graphics.workspace = true
stet-core.workspace = true
stet-render.workspace = true
eframe.workspace = true
egui.workspace = true
rayon.workspace = true
