[package]
name = "stet-wasm"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Scott Bowman <scott@bowmans.org>"]
description = "WebAssembly bindings for stet PostScript interpreter"

[lib]
crate-type = ["cdylib"]

[dependencies]
stet-core = { path = "../stet-core" }
stet-ops = { path = "../stet-ops" }
stet-engine = { path = "../stet-engine" }
stet-render = { path = "../stet-render", default-features = false }
stet-pdf-reader = { path = "../stet-pdf-reader", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
