[package]
name = "stet-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Scott Bowman <scott@bowmans.org>"]
description = "WebAssembly bindings for stet PostScript interpreter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stet-fonts = { path = "../stet-fonts" }
stet-graphics = { path = "../stet-graphics" }
stet-core = { path = "../stet-core" }
stet-ops = { path = "../stet-ops" }
stet-engine = { path = "../stet-engine" }
stet-render = { path = "../stet-render", default-features = false }
stet-pdf-reader = { path = "../stet-pdf-reader", default-features = false, features = ["jpx"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
