[package]
name = "stet"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PostScript Level 3 interpreter and PDF rendering engine — library API"
repository.workspace = true
homepage.workspace = true
keywords = ["postscript", "pdf", "interpreter", "rendering", "graphics"]
categories = ["graphics", "rendering"]

[features]
default = ["render", "pdf-output"]
render = ["dep:stet-render"]
pdf-output = ["dep:stet-pdf"]

[dependencies]
stet-fonts.workspace = true
stet-graphics.workspace = true
stet-core.workspace = true
stet-ops.workspace = true
stet-engine.workspace = true
stet-render = { workspace = true, optional = true }
stet-pdf = { workspace = true, optional = true }

[dev-dependencies]
png = { workspace = true }
stet-pdf-reader = { workspace = true }

[[example]]
name = "render_ps"
required-features = ["render"]

[[example]]
name = "render_pdf"

[[example]]
name = "display_list"
